callbox under mega-menu

--- a/dexam/angular.json
+++ b/dexam/angular.json
@@ -38,7 +38,7 @@
               "src/assets/styles/app/_app.scss",
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/scss/paper-dashboard.scss",
+//              "src/assets/scss/paper-dashboard.scss",
               "src/assets/css/argon-dashboard.css",
               "src/assets/js/plugins/nucleo/css/nucleo.css",
               "src/assets/js/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css",
@@ -46,7 +46,13 @@
               "src/assets/js/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css",
               "src/assets/js/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker3.standalone.min.css",
               "./node_modules/ng-pick-datetime/assets/style/picker.min.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+              "node_modules/ng-uikit-pro-standard/assets/scss/bootstrap/bootstrap.scss",
+              "node_modules/ng-uikit-pro-standard/assets/scss/mdb.scss",
+//              "node_modules/igniteui-angular/styles/igniteui-angular.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
