--- a/dexam/package.json
+++ b/dexam/package.json
@@ -35,6 +35,7 @@
     "@progress/kendo-theme-default": "latest",
     "@service-work/is-loading": "^3.0.2",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "@types/axios": "^0.14.0",
     "@types/hammerjs": "^2.0.36",
     "angular-in-memory-web-api": "^0.6.1",
     "angular2-wizard": "^0.4.0",
